; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_fast_pac.c_eap_fast_parse_end.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_fast_pac.c_eap_fast_parse_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_fast_pac = type { %struct.eap_fast_pac* }

@.str = private unnamed_addr constant [23 x i8] c"END line without START\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.eap_fast_pac**, %struct.eap_fast_pac**)* @eap_fast_parse_end to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @eap_fast_parse_end(%struct.eap_fast_pac** %0, %struct.eap_fast_pac** %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.eap_fast_pac**, align 8
  %5 = alloca %struct.eap_fast_pac**, align 8
  %6 = alloca %struct.eap_fast_pac*, align 8
  store %struct.eap_fast_pac** %0, %struct.eap_fast_pac*** %4, align 8
  store %struct.eap_fast_pac** %1, %struct.eap_fast_pac*** %5, align 8
  %7 = load %struct.eap_fast_pac**, %struct.eap_fast_pac*** %5, align 8
  %8 = load %struct.eap_fast_pac*, %struct.eap_fast_pac** %7, align 8
  %9 = icmp eq %struct.eap_fast_pac* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %38

11:                                               ; preds = %2
  %12 = load %struct.eap_fast_pac**, %struct.eap_fast_pac*** %4, align 8
  %13 = load %struct.eap_fast_pac*, %struct.eap_fast_pac** %12, align 8
  %14 = icmp ne %struct.eap_fast_pac* %13, null
  br i1 %14, label %15, label %32

15:                                               ; preds = %11
  %16 = load %struct.eap_fast_pac**, %struct.eap_fast_pac*** %4, align 8
  %17 = load %struct.eap_fast_pac*, %struct.eap_fast_pac** %16, align 8
  store %struct.eap_fast_pac* %17, %struct.eap_fast_pac** %6, align 8
  br label %18

18:                                               ; preds = %23, %15
  %19 = load %struct.eap_fast_pac*, %struct.eap_fast_pac** %6, align 8
  %20 = getelementptr inbounds %struct.eap_fast_pac, %struct.eap_fast_pac* %19, i32 0, i32 0
  %21 = load %struct.eap_fast_pac*, %struct.eap_fast_pac** %20, align 8
  %22 = icmp ne %struct.eap_fast_pac* %21, null
  br i1 %22, label %23, label %27

23:                                               ; preds = %18
  %24 = load %struct.eap_fast_pac*, %struct.eap_fast_pac** %6, align 8
  %25 = getelementptr inbounds %struct.eap_fast_pac, %struct.eap_fast_pac* %24, i32 0, i32 0
  %26 = load %struct.eap_fast_pac*, %struct.eap_fast_pac** %25, align 8
  store %struct.eap_fast_pac* %26, %struct.eap_fast_pac** %6, align 8
  br label %18

27:                                               ; preds = %18
  %28 = load %struct.eap_fast_pac**, %struct.eap_fast_pac*** %5, align 8
  %29 = load %struct.eap_fast_pac*, %struct.eap_fast_pac** %28, align 8
  %30 = load %struct.eap_fast_pac*, %struct.eap_fast_pac** %6, align 8
  %31 = getelementptr inbounds %struct.eap_fast_pac, %struct.eap_fast_pac* %30, i32 0, i32 0
  store %struct.eap_fast_pac* %29, %struct.eap_fast_pac** %31, align 8
  br label %36

32:                                               ; preds = %11
  %33 = load %struct.eap_fast_pac**, %struct.eap_fast_pac*** %5, align 8
  %34 = load %struct.eap_fast_pac*, %struct.eap_fast_pac** %33, align 8
  %35 = load %struct.eap_fast_pac**, %struct.eap_fast_pac*** %4, align 8
  store %struct.eap_fast_pac* %34, %struct.eap_fast_pac** %35, align 8
  br label %36

36:                                               ; preds = %32, %27
  %37 = load %struct.eap_fast_pac**, %struct.eap_fast_pac*** %5, align 8
  store %struct.eap_fast_pac* null, %struct.eap_fast_pac** %37, align 8
  store i8* null, i8** %3, align 8
  br label %38

38:                                               ; preds = %36, %10
  %39 = load i8*, i8** %3, align 8
  ret i8* %39
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
